--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
+rasa==3.7.0b1
 rasa-sdk==3.7.1
-pytz==2022.7.1
 spacy==3.7.0
-requests==2.31.0
-dateparser==1.2.0
-google-api-core==2.8.0
-google-api-python-client==2.126.0
-google-auth==2.29.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.0.0
 typing-extensions==4.7.1
 transformers==4.41.2
 nltk==3.8.1
+setuptools==65.5.1
+aio_pika==8.2.3
+jax==0.4.13
+jaxlib==0.4.13
