--- a/domain.yml
+++ b/domain.yml
@@ -15,7 +15,6 @@ actions:
   - validate_modify_event_form
   - validate_cadastro_form
   - action_reset_all
-  - action_restart
   - action_store_feedback
 
 entities:
@@ -23,23 +22,18 @@ entities:
   - feedback
 
 intents:
-  - diversao
   - saudações  
   - marcar_consulta
   - remarcar_consulta
   - concordancia
   - cancelar_consulta
-  - resultado_de_exames
   - saber_local_de_atendimento
-  - solicitar_receita
-  - solicitar_atestado
   - verificar_plano_de_saude
   - preco_consulta
   - informacoes_sobre_servico
   - iniciar_cadastro
   - negacao
   - perguntar_dias_livres
-  - checar_disponibilidade
   - metodo_de_pagamento
   - duvida
   - provide_feedback
@@ -170,16 +164,6 @@ slots:
     - type: custom
 
 
-  #parte de teste
-  
-  
-  
-  
-
-
-
-  
-
 forms:
   cadastro_form:
     required_slots:
@@ -210,55 +194,43 @@ forms:
 
 responses:
   utter_metodo_de_pagamento:
-    - text: |
-        Oferecemos as seguintes opções de pagamento:
-        - Pix
-        - Dinheiro
-        - Cartão de débito
-        - Cartão de crédito (em até 3x sem juros)
+    - text: "Aceitamos diversas formas de pagamento, incluindo Pix, dinheiro, e cartões de débito e crédito, com possibilidade de parcelar em até 3 vezes sem juros"
 
   utter_ask_delete_event_form_cpf:
-    - text: "Você poderia me fornecer seu CPF para que possamos continuar?"
-    - text: "Para seguirmos adiante, me informe seu CPF, por favor."
+    - text: Você poderia me passar seu CPF para que possamos continuar?
 
   utter_ask_modify_event_form_cpf:
-    - text: "Poderia confirmar seu CPF para verificarmos seu cadastro?"
-    - text: "Por gentileza, insira seu CPF para que possamos confirmar suas informações."
+    - text: Só para confirmar, você poderia digitar seu CPF novamente? Quero garantir que temos tudo certinho aqui
+ 
 
   utter_ask_modify_event_form_time:
-    - text: "Para qual data você gostaria de remarcar?"
-
-  utter_free_slots:
-    - text: "Os proximos horarios disponiveis sao: {free_slots}"
+    - text: Para qual data você gostaria de remarcar?
 
   utter_ask_rephrase:
-    - text: "Parece que não entendi bem. Poderia explicar novamente?"
-    - text: "Me desculpe, não captei o que você disse. Você poderia repetir?"
+    - text: Ops, acho que não entendi. Você poderia repetir?
 
   utter_fail_sign:
-    - text: "Desculpe não conseguimos te cadastrar em nosso sistema, parece que houve um erro. Tente novamente mais tarde!"
+    - text: Desculpe não conseguimos te cadastrar em nosso sistema, parece que houve um erro. Tente novamente mais tarde!
   
 
   utter_success_sign:
-    - text: "Cadastro concluído com sucesso!"
+    - text: E tá tudo certo! Seu cadastro foi concluído com sucesso
 
 
   utter_confirm_modification:
-    - text: "A data da sua consulta foi alterada com sucesso!"
+    - text: Tudo certo! Sua consulta foi remarcada. Nos vemos no novo dia!
     
   utter_ask_event_form_cpf:
-    - text: "Poderia informar seu CPF corretamente para confirmamos seu cadastro?  "
+    - text: Poderia me passar seu CPF? Precisamos dele para te identificar no nosso sistema
 
   utter_confirm_appointment:
-    - text: "Deseja agendar?"
+    - text: Deseja agendar?
 
   utter_default:
-    - text: "Desculpe, não entendi o que deseja"
+    - text: Desculpe, não entendi o que deseja
 
   utter_ask_event_form_time:
-    - text: |
-        Qual dia e horário seria melhor pra você?
-        Você pode perguntar os proximos dias disponíveis, um mês específico, ou dia do mês
+    - text:  Qual dia e horário ficam melhores pra você? Se quiser, pode perguntar os próximos horários disponíveis, ou você escolhe um mês ou dia específico
 
   utter_show_options:
     - text: No que posso te ajudar?
@@ -273,11 +245,10 @@ responses:
           payload: "/duvida"
 
   utter_ask_cadastro_form_nome:
-    - text: "Para começarmos, poderia nos contar seu nome completo?"
-    - text: "Antes de tudo, me diga seu nome completo, por favor?"
+    - text: Antes de tudo, me diga seu nome completo, por favor?
 
   utter_inform_form:
-    - text: "Para usar dos nossos serviços você deve fazer um pequeno cadastro com a gente"
+    - text: Para usar dos nossos serviços você deve fazer um pequeno cadastro com a gente
 
   utter_duvida:
     - text: Que dúvida você tem sobre nossos serviços?
@@ -297,55 +268,38 @@ responses:
 
 
 
-
   utter_ask_cadastro_form_data_nascimento:
-    - text: "Qual é a sua data de nascimento?"
+    - text: Qual é a sua data de nascimento?
 
   utter_ask_cadastro_form_cpf:
-    - text: "Agora, informe seu CPF"
-    - text: "Por favor, agora digite seu CPF"
+    - text: Me passa seu CPF? Precisamos dele para te identificar no nosso sistema
 
   utter_informacoes_sobre_servico:
-    - text: |
-        Oferecemos uma ampla gama de serviços para promover seu bem-estar e saúde mental, incluindo:
-        Terapia Individual
-        Consulta com Psiquiatra
-        Consulta com Psicólogo
-        Terapia Cognitiva Comportamental
-        Psicoterapia Online
-        Terapia de Casal
+    - text: "Aqui na clínica, temos um monte de coisas boas para você: desde terapia individual até sessões com psiquiatra, psicólogo, terapias comportamentais e até psicoterapia online"
 
 
 
 
   utter_ask_cadastro_form_email:
-    - text: Informe seu email
     - text: Agora informe seu email
-    - text: Por favor, informe seu email
 
   utter_ask_cadastro_form_telefone:
     - text: Por fim, informe seu telefone celular
-    - text: Agora para finalizarmos, informe seu número de celular
-    - text: Por favor, agora informe seu número de celular para finalizarmos seu cadastro
-
 
   utter_inicia_cadastro:
-    - text: "Você deseja se cadastrar?"
+    - text: Você deseja se cadastrar?
 
   utter_verifica_cadastro: 
-    - text: Você é já é cadastrado?
-    - text: Você já possui um cadastro?
-    - text: Para darmos inicio, você já é cadastrado?
+    - text: Só pra checar, você já tem cadastro com a gente?
 
   utter_submit:
     - text: Muito obrigado, tenha um ótimo dia!
 
   utter_saudações:
-    - text: Olá! Bem-vindo à nossa clínica.
-
+    - text: Oi! Que bom te ver por aqui!!!
 
   utter_preco_consulta:
-    - text: O preço de nossas consultas é R$450,00 
+    - text: Nossas consultas custam R$450,00
 
   utter_marcar_consulta: 
     - text: Deseja marcar uma consulta conosco?
@@ -357,14 +311,11 @@ responses:
     - text: Deseja remarcar a data da consulta ?
 
   utter_terminar_conversa:
-    - text: Há mais alguma coisa com que eu possa te ajudar?
-    - text: Posso te ajudar com mais alguma coisa?
-
+    - text: Mais alguma coisa que posso fazer por você hoje?
 
   utter_final:
-    - text: Muito obrigado pela preferência {nome}, poderia avaliar nossa conversa de 1 a 5? 
-    - text: Obrigado pela preferência {nome}, poderia avaliar nossa conversa de 1 a 5? 
-
+    - text: Obrigado pela preferência! Que tal dar uma nota de 1 a 5 para o nosso papo de hoje?
+   
   utter_verificar_plano_de_saude:
     - text: |
         Nossa clínica aceita os seguintes planos de saúde:
@@ -373,7 +324,6 @@ responses:
         - Ampla Saúde
       
   utter_desmarcar_consulta:
-    - text: Consulta desmarcada!
     - text: Seu agendamento foi desmarcado!
 
   utter_saber_local_de_atendimento:
